@@ -467,9 +467,12 @@ static int		get_clock	(CalcHandle* handle, CalcClock* clock)
 static int		del_var		(CalcHandle* handle, VarRequest* vr)
 {
 	unsigned int i;
+	char *utf8;
 
-	snprintf(update_->text, sizeof(update_->text), _("Deleting %s..."), vr->name);
-    update_label();
+	utf8 = ticonv_varname_to_utf8(handle->model, vr->name);
+	snprintf(update_->text, sizeof(update_->text), _("Deleting %s..."), utf8);
+	g_free(utf8);
+	update_label();
 
 	send_key(handle, 0x0040);	// Quit
 	send_key(handle, 0x0009);	// Clear
